force-app/main/default/objects/Activity/fields/Agenda_sent__c.field-meta.xml
<CustomField>
    <fullName>Agenda_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agenda sent? (Add agenda to Comments)</label>
    <type>Checkbox</type>
</CustomField>