force-app/main/default/objects/Activity/fields/Agenda_Sent_Add_to_Description__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Sent_Add_to_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agenda Sent (Add to Description)</label>
    <type>Checkbox</type>
</CustomField>