force-app/main/default/objects/Activity/fields/Did_I_Get_My_Message_to_the_Right_Person__c.field-meta.xml
<CustomField>
    <fullName>Did_I_Get_My_Message_to_the_Right_Person__c</fullName>
    <label>Did I Get My Message to the Right Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>