force-app/main/default/objects/Activity/fields/Do_I_Have_An_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Do_I_Have_An_Appointment__c</fullName>
    <label>Do I Have An Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>