force-app/main/default/objects/Activity/fields/Objective_of_the_call__c.field-meta.xml
<CustomField>
    <fullName>Objective_of_the_call__c</fullName>
    <label>Objective of the call</label>
    <type>TextArea</type>
</CustomField>