force-app/main/default/objects/Activity/fields/Objective_of_the_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Objective_of_the_Meeting__c</fullName>
    <label>Objective of the Meeting</label>
    <type>TextArea</type>
</CustomField>