force-app/main/default/objects/Activity/fields/Outcome_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Next_Steps__c</fullName>
    <label>Outcome / Next Steps</label>
    <type>TextArea</type>
</CustomField>