force-app/main/default/objects/Activity/fields/Outcome_of_the_Call__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_the_Call__c</fullName>
    <label>Outcome of the Call</label>
    <type>TextArea</type>
</CustomField>