force-app/main/default/objects/Activity/fields/Trigger_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Date_Time_Field__c</fullName>
    <description>Used in tasks for sending monthly &quot;My Activities &amp; New Opps Last Month&quot;</description>
    <label>Trigger Date Time Field</label>
    <type>DateTime</type>
</CustomField>