force-app/main/default/objects/Activity/fields/What_3_things_do_you_want_to_learn__c.field-meta.xml
<CustomField>
    <fullName>What_3_things_do_you_want_to_learn__c</fullName>
    <label>What 3 things do you want to learn?</label>
    <type>TextArea</type>
</CustomField>