force-app/main/default/objects/Activity/fields/What_can_you_give__c.field-meta.xml
<CustomField>
    <fullName>What_can_you_give__c</fullName>
    <label>What can you give?</label>
    <type>TextArea</type>
</CustomField>