force-app/main/default/objects/Activity/fields/What_Do_I_Need_to_Do_Next__c.field-meta.xml
<CustomField>
    <fullName>What_Do_I_Need_to_Do_Next__c</fullName>
    <label>What Do I Need to Do Next</label>
    <type>TextArea</type>
</CustomField>