force-app/main/default/objects/Activity/fields/What_Do_I_Plan_To_Accomplish__c.field-meta.xml
<CustomField>
    <fullName>What_Do_I_Plan_To_Accomplish__c</fullName>
    <label>What Do I Plan To Accomplish</label>
    <type>TextArea</type>
</CustomField>