force-app/main/default/objects/Activity/fields/What_do_you_want_to_ask_for__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_want_to_ask_for__c</fullName>
    <label>What do you want to ask for?</label>
    <type>TextArea</type>
</CustomField>