force-app/main/default/objects/Activity/fields/What_Does_LTD_Need_to_Do_Next__c.field-meta.xml
<CustomField>
    <fullName>What_Does_LTD_Need_to_Do_Next__c</fullName>
    <label>What Does LTD Need to Do Next</label>
    <type>TextArea</type>
</CustomField>