force-app/main/default/objects/Activity/fields/What_Products_Am_I_Presenting__c.field-meta.xml
<CustomField>
    <fullName>What_Products_Am_I_Presenting__c</fullName>
    <label>What Products Am I Presenting</label>
    <type>TextArea</type>
</CustomField>