force-app/main/default/objects/Activity/fields/What_Specials_Am_I_Promoting__c.field-meta.xml
<CustomField>
    <fullName>What_Specials_Am_I_Promoting__c</fullName>
    <label>What Specials Am I Promoting</label>
    <type>TextArea</type>
</CustomField>