force-app/main/default/objects/Activity/fields/What_will_they_ask_for__c.field-meta.xml
<CustomField>
    <fullName>What_will_they_ask_for__c</fullName>
    <label>What will they ask for?</label>
    <type>TextArea</type>
</CustomField>